fix props